apps/appointment-service/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nh-appointment-service
  labels:
    name: nh-appointment-service
