apps/appointment-service/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: nh-appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: nexus-appointment-service:1.0-early
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 20
          ports:
            - containerPort: 5001
              name: http
