apps/appointment-service/k8s/base/postgres-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: appointment-postgres
  namespace: nexus-service
  labels:
    app: appointment-postgres
    app.kubernetes.io/name: appointment-postgres
    app.kubernetes.io/part-of: nexus-healthcare-system
    app.kubernetes.io/component: database
spec:
  serviceName: appointment-postgres-svc
  replicas: 2
  selector:
    matchLabels:
      app: appointment-postgres
  template:
    metadata:
      labels:
        app: appointment-postgres
    spec:
      nodeSelector:
        workload: system-infra
      containers:
        - name: postgres
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
          readinessProbe:
            exec:
              command: ['cmd', 'pg_isready', '-U', 'postgres']
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ['cmd', 'pg_isready', '-U', 'postgres']
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: appointment-psql-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: appointment-psql-data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 10Gi
