apps/appointment-service/k8s/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-postgres-svc
  namespace: nexus-service
  labels:
    app: appointment-postgres
    app.kubernetes.io/name: appointment-postgres
    app.kubernetes.io/part-of: nexus-healthcare-system
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: appointment-postgres
