apps/appointment-service/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service-svc
  namespace: nexus-service
  labels:
    app.kubernetes.io/name: appointment-service
    app.kubernetes.io/part-of: nexus-healthcare-system
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
      name: http
    - port: 500051
      targetPort: 500051
      name: grpc
  selector:
    app: appointment-service
